# zephyr

./: .shippable.yml  CMakeLists.txt  CODEOWNERS  west.yml
arch/: Kconfig
arch/xtensa/core/: CMakeLists.txt  cpu_idle.c  vector_handlers.c  xtensa-asm2-util.S  xtensa-asm2.c  xtensa_asm2_util.S
arch/xtensa/core/startup/: reset-vector.S
arch/xtensa/include/: kernel_arch_func.h  xtensa_api.h  xtensa_asm2_s.h  xtensa_context.h
boards/xtensa/intel_adsp_baytrail/: Kconfig.defconfig  intel_adsp_baytrail.yaml  intel_adsp_baytrail_defconfig
boards/xtensa/intel_adsp_broadwell/: Kconfig.defconfig  intel_adsp_broadwell.yaml
boards/xtensa/intel_adsp_cavs18/: Kconfig.defconfig  intel_adsp_cavs18.dts  intel_adsp_cavs18.yaml  intel_adsp_cavs18_defconfig
boards/xtensa/intel_adsp_cavs18/doc/: index.rst
boards/xtensa/intel_adsp_cavs20/: Kconfig.defconfig  intel_adsp_cavs20.yaml  intel_adsp_cavs20_defconfig
boards/xtensa/intel_adsp_cavs20/doc/: index.rst
boards/xtensa/intel_adsp_cavs25/: Kconfig.defconfig  intel_adsp_cavs25.yaml  intel_adsp_cavs25_defconfig
boards/xtensa/intel_adsp_cavs25/doc/: index.rst
boards/xtensa/up_squared_adsp/: CMakeLists.txt  Kconfig.defconfig  up_squared_adsp.dts  up_squared_adsp.yaml  up_squared_adsp_defconfig
boards/xtensa/up_squared_adsp/bootloader/: CMakeLists.txt  boot_entry.S  boot_loader.c  manifest.h  reset-vector.S
boards/xtensa/up_squared_adsp/tools/: README.md  adsplog.py  dump_trace.py  fw_loader.py  logtool.py
boards/xtensa/up_xtreme_adsp/: Kconfig.board  Kconfig.defconfig  up_xtreme_adsp.dts  up_xtreme_adsp.yaml  up_xtreme_adsp_defconfig
cmake/toolchain/xtools/: generic.cmake  target.cmake
cmake/toolchain/zephyr/0.11/: target.cmake
drivers/console/: CMakeLists.txt  Kconfig  ipm_console.c  uart_console.c
drivers/dai/intel/dmic/: dmic.c
drivers/dai/intel/ssp/: ssp.c
drivers/dma/: dma_dw_common.c  dma_dw_common.h  dma_intel_adsp_gpdma.c  dma_intel_adsp_hda.c  dma_intel_adsp_hda_host_in.c  dma_intel_adsp_hda_host_out.c  dma_intel_adsp_hda_link_in.c  dma_intel_adsp_hda_link_out.c
drivers/interrupt_controller/: intc_cavs.c
drivers/ipm/: CMakeLists.txt  Kconfig  ipm_adsp.c  ipm_cavs_idc.c
drivers/power_domain/: power_domain_intel_adsp.c
drivers/timer/: cavs_timer.c  intel_adsp_timer.c
dts/bindings/interrupt-controller/: intel,cavs-intc.yaml
dts/xtensa/intel/: intel_apl_adsp.dtsi  intel_cavs15.dtsi  intel_cavs20.dtsi
include/: irq_nextlevel.h  kernel.h  spinlock.h
include/arch/xtensa/: arch.h  irq.h
include/drivers/: dai.h
include/linker/: common-rom.ld  section_tags.h
include/sys/: arch_interface.h  thread_stack.h  util.h
kernel/: Kconfig  idle.c  init.c  poll.c  sched.c  thread.c  timeout.c
kernel/include/: kswap.h
lib/os/: printk.c
modules/: Kconfig
samples/audio/sof/: CMakeLists.txt  Kconfig  prj.conf
samples/audio/sof/boards/: up_squared_adsp.conf
samples/audio/sof/src/: dai.c  dma.c  main.c  pm_memory.c  pm_runtime.c
samples/hello_world/: prj.conf
samples/hello_world/src/: main.c
samples/subsys/ipc/ipm_echo/: prj.conf
scripts/west_commands/: sign.py
soc/xtensa/intel_adsp/: Kconfig
soc/xtensa/intel_adsp/ace/: multiprocessing.c  power.c
soc/xtensa/intel_adsp/common/: CMakeLists.txt  adsp.c  bootloader.cmake  clk.c  dai.c  dma.c  fix_elf_addrs.py  ipc.c  lps_wait.c  mem_window.c  pm_runtime.c  power_down.S  printk_out.c  soc.c  soc_mp.c
soc/xtensa/intel_adsp/common/arch/: cpu.c
soc/xtensa/intel_adsp/common/bootloader/: CMakeLists.txt  base_module.c  boot_entry.S  boot_loader.c  boot_module.c  start_address.S
soc/xtensa/intel_adsp/common/include/: intel_adsp_hda.h  intel_adsp_ipc.h  soc.h
soc/xtensa/intel_adsp/common/include/adsp/: io.h
soc/xtensa/intel_adsp/common/include/cavs/: cpu.h  mailbox.h  memory.h
soc/xtensa/intel_adsp/common/include/cavs/drivers/: dw-dma.h  idc.h  interrupt.h  sideband-ipc.h
soc/xtensa/intel_adsp/common/include/cavs/lib/: asm_ldo_management.h  clk.h  cpu.h  mailbox.h  memory.h  pm_runtime.h  power_down.h
soc/xtensa/intel_apl_adsp/: Kconfig.defconfig  adsp.c  dts_fixup.h  linker.ld  main_entry.S  soc.c  soc.h
soc/xtensa/intel_s1000/: soc.c
subsys/audio/: sof.c
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_adsp.c  log_backend_rb.c  log_mgmt.c
subsys/logging/backends/: log_backend_adsp_hda.c
tests/kernel/context/src/: main.c
tests/subsys/audio/sof/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/audio/sof/src/: main.c  test_audio_sof_alloc.c  test_audio_sof_irq.c  test_audio_sof_sched.c
(+129 files in other folders)
